themes/simple/css/admidio.css
/* ... */
.card-header {
    font-weight: bold;
    font-size: 150%;
}

.card-header .bi {
    margin-right: 0.5rem;
}

.card-header .float-end .bi {
    margin-right: 0;
}

.admidio-blog .card-footer {
    font-size: 80%;
}

.admidio-field-group .list-group-item {
    border: none;
    background-color: var(--bs-tertiary);
    padding: 0 0 1rem 0;
}

.admidio-field-group .list-group-item .list-group-item {
    padding: 0;
}

.admidio-tabs {
    flex-wrap: nowrap;     /* never wrap */
    width: 100%;
}

.admidio-tabs .nav-item, .admidio-tabs .nav-link {
    display: flex;
}

.admidio-tabs .nav-link {
    flex-direction: column;
    justify-content: center;
    text-align: center;
    max-width: 250px;
}

.admidio-tabs .dropdown-toggle {
    white-space: normal;
    text-align: center;
    align-content: center;
}

.admidio-tabbed-field-group .card-body, .admidio-accordion-field-group .card-body {
    border-radius: var(--bs-card-inner-border-radius);
}

.admidio-tabbed-field-group .card-body .list-group-item, .admidio-accordion-field-group .card-body .list-group-item {
    background-color: var(--bs-tertiary);
}

.admidio-tabbed-field-group .list-group-item, .admidio-accordion-field-group .list-group-item {
    border: none;
    padding: 0 0 1rem 0;
}

.admidio-tabbed-field-group .button, .admidio-accordion-field-group .button {
    padding: 0.5rem 0.5rem 0.5rem 0.5rem;
}

.admidio-tabbed-field-group .list-group-item .list-group-item, .admidio-accordion-field-group .list-group-item .list-group-item {
    padding: 0;
}

.card .admidio-info-created-edited {
    margin-bottom: 0;
    margin-top: 0;
}

.card-footer .admidio-info-created-edited {
    font-size: 100% !important;
}

.admidio-blog-comment .card-header, .admidio-blog-comment .card-body, .admidio-blog-comment .card-footer {
    background-color: var(--bs-tertiary);
}

.admidio-blog-comment .card-header {
    font-size: 120%;
    padding-bottom: 0;
}

.admidio-blog-comment {
    margin-bottom: 1rem;
}

.admidio-blog .card-body > .btn {
    margin-top: 1rem;
    display: block;
    text-align: left;
}

.admidio-card {
    border: none;
    background-color: var(--bs-tertiary);
    margin: 1rem 0;
    height: 95%;
}

.admidio-blog img, .admidio-card img {
    max-width: 100%;
    height: auto;
}

.admidio-card li {
    padding-left: 0;
    padding-right: 0;
    background-color: var(--bs-tertiary);
}

/***********************************/
/* Tabs */
/***********************************/

.tab-content {
    padding: 1rem 1rem 0 1rem;
}

.tab-content:has( > .tab-pane > .accordion) {
    padding: unset;
}

/***********************************/
/* Accordion */
/***********************************/

.accordion {
    --bs-accordion-bg: var(--bs-body-bg);
    --bs-accordion-btn-color: var(--bs-link-color);
    --bs-accordion-active-color: var(--bs-tertiary);
    --bs-accordion-active-bg: var(--bs-secondary);
}

.accordion-button::after {
    background-image: none !important;
    background-color: var(--bs-accordion-btn-color);
    mask: url("data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 16 16' fill='black'><path fill-rule='evenodd' d='M1.646 4.646a.5.5 0 0 1 .708 0L8 10.293l5.646-5.647a.5.5 0 0 1 .708.708l-6 6a.5.5 0 0 1-.708 0l-6-6a.5.5 0 0 1 0-.708z'/></svg>") no-repeat center;
}

.accordion-button:not(.collapsed)::after {
    background-color: var(--bs-accordion-active-color);
}

.accordion-body {
    padding: 1rem 1rem 0 1rem;
}

.accordion-button {
    font-size: 1.3rem;
}

.accordion-button:focus {
    box-shadow: none;
}

.tab-content .accordion .accordion-item:first-child {
    border-top: unset;
}

.tab-content .accordion .accordion-item:last-child {
    border-bottom: unset;
}

.tab-content .accordion .accordion-item {
    border-left: unset;
    border-right: unset;
}

.tab-content .accordion .accordion-item:first-of-type > .accordion-header .accordion-button {
    border-radius: unset;
}


/***********************************/
/* Navbar */
/***********************************/

.navbar {
    --bs-navbar-padding-x: 1rem;
}

.navbar-filter {
    background-color: var(--bs-tertiary);
}

.nav-tabs {
    margin-bottom: 0;
}

.nav-tabs .nav-link {
    background-color: var(--bs-tertiary);
    border-color: var(--bs-nav-tabs-border-color);
    font-weight: bold;
}

.navbar .admidio-form-group {
    margin-right: 0.5rem;
}

/***********************************/
/* Tables */
/***********************************/

.table td, .table th {
    color: var(--bs-body-color);
}

.table-hover tbody tr td .admidio-functions {
    visibility: hidden;
}

.table-hover tbody tr:hover td .admidio-functions {
    visibility: visible;
}

/***********************************/
/* Various settings */
/***********************************/

.admidio-opacity-reduced {
    opacity: 0.4;
}

.list-unstyled li {
    padding-top: 0.5rem;
}

.admidio-info-created {
    display: block;
}

.admidio-info-created-edited {
    font-size: 80%;
}

.dropdown-item {
    color: var(--bs-secondary);
    background: var(--bs-body-bg);
}

.popover {
    --bs-popover-bg: var(--bs-body-bg);
    --bs-popover-header-bg: var(--bs-tertiary);
}

.tooltip {
    --bs-tooltip-bg: var(--bs-secondary);
}

.breadcrumb {
    --bs-breadcrumb-bg: var(--bs-tertiary);
    --bs-breadcrumb-padding-y: 0.75rem;
    --bs-breadcrumb-padding-x: 1rem;
}

.breadcrumb-item {
    display: block;
}

.badge {
    --bs-badge-padding-y: .25em;
    --bs-badge-padding-x: .5em;
    margin-left: 0.5rem;
}

.page-item.active .page-link {
    background-color: var(--bs-secondary);
    border-color: var(--bs-secondary);
}

#adm_imprint {
    margin-bottom: 2rem;
    font-size: 80%;
    overflow-wrap: normal;
    word-wrap: normal;
    word-break: normal;
    hyphens: none;
}

.admidio-info-icon {
    color: #4496dd;
    cursor: pointer;
    margin-left: 0.5rem;
}

#adm_profile_photo, #adm_inventory_item_picture {
    max-width: 300px;
    width: 100% !important;
    object-fit: cover !important;
}
/* ... */

